--- a/suixinMath/index.html
+++ b/suixinMath/index.html
@@ -127,6 +127,14 @@ function checkReult()
 
 <style type="text/css">
 
+div{
+font-size:28px;
+}
+
+input{
+font-size:28px;
+}
+
 .num{
 border:0;
 
