--- a/suixinMath/index.html
+++ b/suixinMath/index.html
@@ -4,10 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 
-<title>Suixin Math</title>
-
 <script language="javascript">
-
+//生成从minNum到maxNum的随机数
 function randomNum(minNum,maxNum){ 
     switch(arguments.length){ 
         case 1: 
@@ -46,7 +44,7 @@ function generateMathProblem()
   var problemCount = document.getElementById("problemCount");
   
   problemCount.innerHTML = parseInt(problemCount.innerHTML)+1;
-
+  
 
   var operate = document.getElementById("operate");
   
@@ -97,9 +95,27 @@ function checkReult()
   expresion += num.value;
   
   num = document.getElementById("result");
+  
+  var showInf = document.getElementById("showInf");
+  
+  var useCount = document.getElementById("useCount");
+  
+  useCount.innerHTML = parseInt(useCount.innerHTML)+1;
+  
   if(eval(expresion)==num.value)
   {
-    alert("做对了，再做一个！");
+    showInf.innerHTML= "做对了，再做一个！";
+	   
+  
+    if((parseInt(useCount.innerHTML)%2)==1)
+    {
+      showInf.style= "background-color:green;color:white;";
+    }
+    else
+    {
+      showInf.style= "background-color:blue;color:white;";
+    }
+
 	
     var num = document.getElementById("result");
 	
@@ -115,7 +131,18 @@ function checkReult()
   else
   {
   
-    alert("做错了,检查一下！");
+    showInf.innerHTML= "做错了,检查一下！";
+	
+	if((parseInt(useCount.innerHTML)%2)==1)
+    {
+      showInf.style= "background-color:red;color:white;";
+    }
+    else
+    {
+      showInf.style= "background-color:yellow;color:blue;";
+    }
+	
+
 	
     var num = document.getElementById("result");
 	
@@ -124,6 +151,8 @@ function checkReult()
 	num.focus();
     
   }
+  
+
   
   return false;
 }
@@ -153,22 +182,23 @@ text-align:center;
 }
 
 </style>
+
+<title>suixin mathematics exercises</title>
 </head>
 
 <body onload="generateMathProblem()">
-<div><img src="mathpic.png" height="50px" /></div>
 <div id="mathform">
-<div>第<span id="problemCount">0</span>个问题：</div>
-<br /><br />
+<div>第<span id="problemCount">0</span>个问题：<span id="useCount" style="display:none">0</span></div>
+<br />
 <form name="form1" action="">
 <div id="mathproblem">
-<input class="num" id="num1" name="num1" type="text" value="" size="5" readonly="true" />
+<input class="num" id="num1" name="num1" type="text" value="" size="3" readonly="true" />
 <input class="num" id="operate" name="orperate" type="text" size="1" readonly="true" value=""/>
-<input class="num" id="num2" name="num2" type="text" size="5" readonly="true" value="" />
+<input class="num" id="num2" name="num2" type="text" size="3" readonly="true" value="" />
 <br /><br />=
-<input class="num" id="result" name="result" size="6" value="" />
+<input class="num" id="result" name="result" size="4" value="" />
 <br /><br />
-<input id="submit" name="submit" type="submit" value="提交" onclick="return checkReult()" />
+<input id="submit" name="submit" type="submit" value="提交" onclick="return checkReult()" />&nbsp;&nbsp;<span id="showInf" style="background-color:blue;color:white;">请开始答题</span>
 </div>
 </form>
 </div>
