--- a/DictationHelper/index.html
+++ b/DictationHelper/index.html
@@ -7,30 +7,49 @@
 <title>suixin dictation helper</title>
 
 <script type="text/javascript"> 
-eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('m A(){1 e=4.2(\'e\').d;H(1 i=0;i<5;i++){e=e.O("\\n\\n","\\n")}1 v=e.T("\\n");1 a=\'{"f":[\';a+=\'{"c":"U"},\';H(1 i=0;i<v.u;i++){a+=\'{"c":"\'+v[i]+\'"},\'}a+=\'{"c":"V"}\';a+=\']}\';S a}m P(){1 7=4.2("7");7.k="z-j:Q;j:J;";1 b=4.2("b");b.r="R：";1 6=4.2("6");6.k="l:0;l-t:W;l-t-k:11;l-t-j:12;G-13:10;";1 C=A();1 g=X.Y(C);1 i=0;1 p=3;1 h=p;1 D=Z(m(){B(i<g.f.u&&h>0){4.2(\'6\').d=g.f[i].c;x();h--}I B(i<g.f.u&&h<=0){i++;h=p;4.2(\'6\').d=g.f[i].c;x()}I{1 7=4.2("7");7.k="z-j:1m;j:J;";1 b=4.2("b");b.r="1n";1 6=4.2("6");6.d="";6.k="1o:1l;";1i(D)}},1j)}m x(){1 y=4.2(\'1t\');1 o=4.2(\'s\');1 6=4.2(\'6\').d;y.1u(o);1 M=\'<q w="s" E="E">\';1 N=\'<1s w="1p" F="1q://1r.18.19/1k?17=14&15=16-8&1f=9&G=\'+6+\'" 1h="q/1e">\';1 L=\'<1b w="1c" 1d="0" 1g="0" F="">\';1 K=\'</q>\';y.r=M+N+L+K;o=4.2(\'s\');o.1a()}',62,93,'|var|getElementById||document||ttsText|wordToDict|||jsonContent|inf|word|value|dictationContent|words|obj|oneWordRepeatCount||color|style|border|function||ttsAudio|oneWordRepeatTimes|audio|innerHTML|tts_autio_id|bottom|length|content|id|doTTS|ttsDiv|background|getDictationContentJSON|if|jsonstr|ref|autoplay|src|text|for|else|white|au2|eee|au1|sss|replace|dictation|green|正在听写|return|split|听写开始|听写结束|2px|JSON|parse|setInterval|center|solid|black|align|zh|ie|UTF|lan|baidu|com|play|embed|tts_embed_id|height|mpeg|spd|width|type|clearInterval|4000|text2audio|none|blue|欢迎使用听写助手|display|tts_source_id|http|tts|source|bdtts_div_id|removeChild'.split('|'),0,{}))
+
+eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('h O(b){b=b.F(/(^\\s*)|(\\s*$)/g,"");b=b.F(/(^\\n*)|(\\n*$)/g,"");W b}h X(){1 6=3.2(\'6\').k;6=O(6);6=6.F(/([.\\n\\r]+)/g,"\\n");1 t=6.1a("\\n");1 7=\'{"e":[\';7+=\'{"m":"1c"},\';1f(1 i=0;i<t.u;i++){v(t[i]!=""){7+=\'{"m":"\'+t[i]+\'"},\'}}7+=\'{"m":"1e"}\';7+=\']}\';W 7}1 x=11;h 14(){1 9=3.2("9");1 d=3.2("d");9.w=I;d.w=K;1 a=3.2("a");a.l="L-o:Y;o:N;";1 c=3.2("c");c.C="15：";1 4=3.2("4");4.l="q:0;q-y:16;q-y-l:17;q-y-o:12;J-13:18;";1 M=X();1 f=1d.19(M);1 i=0;1 A=1b(3.2("10").k);1 j=A;x=Z(h(){v(i<f.e.u&&j>0){3.2(\'4\').k=f.e[i].m;z();j--}U v(i<f.e.u&&j<=0){i++;v(i<f.e.u){j=A;3.2(\'4\').k=f.e[i].m;z();j--}}U{V()}},1z)}h V(){1A(x);1 a=3.2("a");a.l="L-o:#1x;o:N;";1 c=3.2("c");c.C="1u";1 4=3.2("4");4.k="";4.l="1v:1w;";1 9=3.2("9");1 d=3.2("d");9.w=K;d.w=I}h z(){1 E=3.2(\'1F\');1 p=3.2(\'G\');1 4=3.2(\'4\').k;E.1G(p);1 Q=\'<D B="G" T="T" />\';1 P=\'<1E B="1C" H="1D://1B.1t.1j/1k?1l=1y&1g=1h-8&1m=5&J=\'+4+\'" 1q="D/1r" />\';1 R=\'<1s B="1o" 1p="0" 1n="0" H="" />\';1 S=\'</D>\';E.C=Q+P+R+S;p=3.2(\'G\');p.1i()}',62,105,'|var|getElementById|document|ttsText||dictationContent|jsonContent||dictationBtn|wordToDict|str|inf|stopDictationBtn|words|obj||function||oneWordRepeatCount|value|style|word||color|ttsAudio|border|||content|length|if|disabled|intervalRef|bottom|doTTS|oneWordRepeatTimes|id|innerHTML|audio|ttsDiv|replace|tts_autio_id|src|true|text|false|background|jsonstr|white|trim|sss|au1|eee|au2|autoplay|else|stopDictation|return|getDictationContentJSON|green|setInterval|repeatTimes|null|black|align|dictation|正在听写|2px|solid|center|parse|split|parseInt|听写开始|JSON|听写结束|for|ie|UTF|play|com|text2audio|lan|spd|width|tts_embed_id|height|type|mpeg|embed|baidu|欢迎使用听写助手|display|none|0033FF|zh|4000|clearInterval|tts|tts_source_id|http|source|bdtts_div_id|removeChild'.split('|'),0,{}))
 
 </script>
 </head>
 
 <body>
 
-<div id="wordToDict" style="background-color:blue;color:white;"><span id="inf">欢迎使用听写助手</span><input style="display:none;" type="text" id="ttsText" value="" /></div>
+<div id="container" style="text-align:center">
+
+<div id="wordToDict" style="background-color:#0033FF;color:white;"><span id="inf">欢迎使用听写助手</span><input style="display:none;" type="text" id="ttsText" value="" /></div>
 <hr />	
 <div id="bdtts_div_id">	
-<audio id="tts_autio_id" autoplay="autoplay">
-<source id="tts_source_id" src="http://tts.baidu.com/text2audio?lan=zh&ie=UTF-8&spd=8&text=你好,欢迎使用听写助手" type="audio/mpeg">
-<embed id="tts_embed_id" height="0" width="0" src="">
+<audio id="tts_autio_id" autoplay="autoplay" />
+<source id="tts_source_id" src="http://tts.baidu.com/text2audio?lan=zh&ie=UTF-8&spd=5&text=你好,欢迎使用听写助手" type="audio/mpeg" />
+<embed id="tts_embed_id" height="0" width="0" src="" />
 </audio>	
 </div>
 		
 <div>
 <form id="dictationContentForm" name="dictationContentForm">
 请输入听写内容<br /><br />
-<textarea rows="20" cols="10" id="dictationContent" name="dictationContent"></textarea>
+<textarea rows="25" cols="30" id="dictationContent" name="dictationContent"></textarea>
 <br />
-<input type="button" id="dic" value="开始听写" onClick="dictation()" />
+<select id="repeatTimes"><option value="1">重复1次</option><option value="2">重复2次</option><option value="3" selected="selected">重复3次</option></select>
+
+<input type="button" id="dictationBtn" size="20" value="开始听写" onClick="dictation()" />
+
+<input type="button" id="stopDictationBtn" size="20" disabled="disabled" value="停止听写" onClick="stopDictation()" />
 </form>
 </div>
-	
+
+<div style="background-color:#0033FF;color:#CCCCCC; margin-top:5px;">
+<div style="text-align:center">使用说明</div>
+<div style="text-align:left">
+1、语文、英语均可听写；<br /><br />2、听写前先输入想听写的单词，可以让孩子自己录入，强化记忆；<br /><br />3、每个听写单元占一行，如想分别听写hello, world两个单词，那么在hello之后换行，如果想两个单词作为一个单元连读,则让这两个单词在一行即可，如果因为语句过长自然换行，目前会被作为两个单元读出，下一版本计划加以改进。
+<br /><br />
+4、听写开始和结束时，会有对应重复次数的听写开始和结束的提示，请耐心等待。
+</div>
+</div>
+
+<div style="display:none"><script src="https://s13.cnzz.com/z_stat.php?id=5808247&web_id=5808247" language="JavaScript"></script></div>
+
+</div>	
 </body>
 </html>
