--- a/DictationHelper/index.html
+++ b/DictationHelper/index.html
@@ -41,10 +41,13 @@ eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a
 
 <div style="background-color:#0033FF;color:#CCCCCC; margin-top:5px;">
 <div style="text-align:center">使用说明</div>
-<div style="text-align:left">
-1、语文、英语均可听写；<br /><br />2、听写前先输入想听写的单词，可以让孩子自己录入，强化记忆；<br /><br />3、每个听写单元占一行，如想分别听写hello, world两个单词，那么在hello之后换行，如果想两个单词作为一个单元连读,则让这两个单词在一行即可，如果因为语句过长自然换行，目前会被作为两个单元读出，下一版本计划加以改进。
+<div style="text-align:left;padding:10px;">
+1、语文、英语均可听写；<br /><br />
+2、听写前先输入想听写的单词，可以让孩子自己录入，强化记忆；<br /><br />
+3、每个听写单元占一行，如想分别听写hello, world两个单词，那么在hello之后换行，如果想两个单词作为一个单元连读,则让这两个单词在一行即可。<br /><br />
+4、如果因为语句过长导致自然换行，目前只会读出第一行,所以建议每行不要太长,下一版本计划加以改进。
 <br /><br />
-4、听写开始和结束时，会有对应重复次数的听写开始和结束的提示，请耐心等待。
+5、听写开始和结束时，会有对应重复次数的听写开始和结束的提示，请耐心等待。
 </div>
 </div>
 
