--- a/DictationHelper/index-origin.html
+++ b/DictationHelper/index-origin.html
@@ -178,7 +178,7 @@ function doTTS()
 <div>
 <form id="dictationContentForm" name="dictationContentForm">
 请输入听写内容<br /><br />
-<textarea rows="25" cols="30" id="dictationContent" name="dictationContent"></textarea>
+<textarea rows="25" cols="28" id="dictationContent" name="dictationContent"></textarea>
 <br />
 <select id="repeatTimes"><option value="1">重复1次</option><option value="2">重复2次</option><option value="3" selected="selected">重复3次</option></select>
 
@@ -190,10 +190,13 @@ function doTTS()
 
 <div style="background-color:#0033FF;color:#CCCCCC; margin-top:5px;">
 <div style="text-align:center">使用说明</div>
-<div style="text-align:left">
-1、语文、英语均可听写；<br /><br />2、听写前先输入想听写的单词，可以让孩子自己录入，强化记忆；<br /><br />3、每个听写单元占一行，如想分别听写hello, world两个单词，那么在hello之后换行，如果想两个单词作为一个单元连读,则让这两个单词在一行即可，如果因为语句过长自然换行，目前会被作为两个单元读出，下一版本计划加以改进。
+<div style="text-align:left;padding:10px;">
+1、语文、英语均可听写；<br /><br />
+2、听写前先输入想听写的单词，可以让孩子自己录入，强化记忆；<br /><br />
+3、每个听写单元占一行，如想分别听写hello, world两个单词，那么在hello之后换行，如果想两个单词作为一个单元连读,则让这两个单词在一行即可。<br /><br />
+4、如果因为语句过长导致自然换行，目前只会读出第一行,所以建议每行不要太长,下一版本计划加以改进。
 <br /><br />
-4、听写开始和结束时，会有对应重复次数的听写开始和结束的提示，请耐心等待。
+5、听写开始和结束时，会有对应重复次数的听写开始和结束的提示，请耐心等待。
 </div>
 </div>
 
