--- a/DictationHelper/index.html
+++ b/DictationHelper/index.html
@@ -8,7 +8,7 @@
 
 <script type="text/javascript"> 
 
-eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('h O(b){b=b.F(/(^\\s*)|(\\s*$)/g,"");b=b.F(/(^\\n*)|(\\n*$)/g,"");W b}h X(){1 6=3.2(\'6\').k;6=O(6);6=6.F(/([.\\n\\r]+)/g,"\\n");1 t=6.1a("\\n");1 7=\'{"e":[\';7+=\'{"m":"1c"},\';1f(1 i=0;i<t.u;i++){v(t[i]!=""){7+=\'{"m":"\'+t[i]+\'"},\'}}7+=\'{"m":"1e"}\';7+=\']}\';W 7}1 x=11;h 14(){1 9=3.2("9");1 d=3.2("d");9.w=I;d.w=K;1 a=3.2("a");a.l="L-o:Y;o:N;";1 c=3.2("c");c.C="15：";1 4=3.2("4");4.l="q:0;q-y:16;q-y-l:17;q-y-o:12;J-13:18;";1 M=X();1 f=1d.19(M);1 i=0;1 A=1b(3.2("10").k);1 j=A;x=Z(h(){v(i<f.e.u&&j>0){3.2(\'4\').k=f.e[i].m;z();j--}U v(i<f.e.u&&j<=0){i++;v(i<f.e.u){j=A;3.2(\'4\').k=f.e[i].m;z();j--}}U{V()}},1z)}h V(){1A(x);1 a=3.2("a");a.l="L-o:#1x;o:N;";1 c=3.2("c");c.C="1u";1 4=3.2("4");4.k="";4.l="1v:1w;";1 9=3.2("9");1 d=3.2("d");9.w=K;d.w=I}h z(){1 E=3.2(\'1F\');1 p=3.2(\'G\');1 4=3.2(\'4\').k;E.1G(p);1 Q=\'<D B="G" T="T" />\';1 P=\'<1E B="1C" H="1D://1B.1t.1j/1k?1l=1y&1g=1h-8&1m=5&J=\'+4+\'" 1q="D/1r" />\';1 R=\'<1s B="1o" 1p="0" 1n="0" H="" />\';1 S=\'</D>\';E.C=Q+P+R+S;p=3.2(\'G\');p.1i()}',62,105,'|var|getElementById|document|ttsText||dictationContent|jsonContent||dictationBtn|wordToDict|str|inf|stopDictationBtn|words|obj||function||oneWordRepeatCount|value|style|word||color|ttsAudio|border|||content|length|if|disabled|intervalRef|bottom|doTTS|oneWordRepeatTimes|id|innerHTML|audio|ttsDiv|replace|tts_autio_id|src|true|text|false|background|jsonstr|white|trim|sss|au1|eee|au2|autoplay|else|stopDictation|return|getDictationContentJSON|green|setInterval|repeatTimes|null|black|align|dictation|正在听写|2px|solid|center|parse|split|parseInt|听写开始|JSON|听写结束|for|ie|UTF|play|com|text2audio|lan|spd|width|tts_embed_id|height|type|mpeg|embed|baidu|欢迎使用听写助手|display|none|0033FF|zh|4000|clearInterval|tts|tts_source_id|http|source|bdtts_div_id|removeChild'.split('|'),0,{}))
+eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('o W(t){t=t.L(/(^\\s*)|(\\s*$)/g,"");t=t.L(/(^\\n*)|(\\n*$)/g,"");U t}o Y(){2 d=4.3(\'d\').b;d=W(d);d=d.L(/([.\\n\\r]+)/g,"\\n");2 A=d.14("\\n");2 h=\'{"a":[\';h+=\'{"e":"16"},\';15(2 i=0;i<A.f;i++){7(A[i]!=""){h+=\'{"e":"\'+A[i]+\'"},\'}}h+=\'{"e":"13"}\';h+=\']}\';U h}2 D=1f;o 1e(){2 m=4.3("m");2 l=4.3("l");m.x=11;l.x=10;2 j=4.3("j");j.u="Q-v:1h;v:R;";2 q=4.3("q");q.J="18：";2 6=4.3("6");6.u="y:0;y-C:17;y-C-u:1c;y-C-v:1b;O-1d:1a;";2 N=Y();2 9=19.1g(N);2 i=0;2 G=S(4.3("1i").b);2 k=S(4.3("k").b);2 p=G;2 c=k;D=12(o(){7(i>0&&i<(9.a.f-1)&&p>0){4.3(\'6\').b=9.a[i].e;w();p--}z 7(i>0&&i<(9.a.f-1)&&p<=0){i++;7(i<(9.a.f-1)){p=G;4.3(\'6\').b=9.a[i].e;w();p--}}7(i==(9.a.f-1)&&c>=0){7(c>0){4.3(\'6\').b=9.a[i].e;w();c--}z{H()}}z 7(i==(9.a.f-1)&&k==0){H()}7(i==0&&c>0){4.3(\'6\').b=9.a[i].e;w();c--;7(c==0){i++;c=k}}z 7(i==0&&k==0){i++}},1C)}o H(){1D(D);2 j=4.3("j");j.u="Q-v:#1A;v:R;";2 q=4.3("q");q.J="1y";2 6=4.3("6");6.b="";6.u="1z:1H;";2 m=4.3("m");2 l=4.3("l");m.x=10;l.x=11}o w(){2 I=4.3(\'1J\');2 B=4.3(\'E\');2 6=4.3(\'6\').b;I.1I(B);2 T=\'<F K="E" X="X" />\';2 M=\'<1E K="1F" Z="1G://1n.1o.1p/1B?1m=1j&1k=1l-8&1v=5&O=\'+6+\'" 1t="F/1q" />\';2 P=\'<1r K="1s" 1w="0" 1u="0" Z="" />\';2 V=\'</F>\';I.J=T+M+P+V;B=4.3(\'E\');B.1x()}',62,108,'||var|getElementById|document||ttsText|if||obj|words|value|hintRepeatTimesCount|dictationContent|word|length||jsonContent||wordToDict|hintRepeatTimes|stopDictationBtn|dictationBtn||function|oneWordRepeatCount|inf|||str|style|color|doTTS|disabled|border|else|content|ttsAudio|bottom|intervalRef|tts_autio_id|audio|oneWordRepeatTimes|stopDictation|ttsDiv|innerHTML|id|replace|sss|jsonstr|text|eee|background|white|parseInt|au1|return|au2|trim|autoplay|getDictationContentJSON|src|false|true|setInterval|听写结束|split|for|听写开始|2px|正在听写|JSON|center|black|solid|align|dictation|null|parse|green|repeatTimes|zh|ie|UTF|lan|tts|baidu|com|mpeg|embed|tts_embed_id|type|width|spd|height|play|欢迎使用听写助手|display|0033FF|text2audio|5000|clearInterval|source|tts_source_id|http|none|removeChild|bdtts_div_id'.split('|'),0,{}))
 
 </script>
 </head>
@@ -18,7 +18,7 @@ eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a
 <div id="container" style="text-align:center">
 
 <div id="wordToDict" style="background-color:#0033FF;color:white;"><span id="inf">欢迎使用听写助手</span><input style="display:none;" type="text" id="ttsText" value="" /></div>
-<hr />	
+<hr style="border-color:#0033FF" />
 <div id="bdtts_div_id">	
 <audio id="tts_autio_id" autoplay="autoplay" />
 <source id="tts_source_id" src="http://tts.baidu.com/text2audio?lan=zh&ie=UTF-8&spd=5&text=你好,欢迎使用听写助手" type="audio/mpeg" />
@@ -29,16 +29,21 @@ eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a
 <div>
 <form id="dictationContentForm" name="dictationContentForm">
 请输入听写内容<br /><br />
-<textarea rows="25" cols="30" id="dictationContent" name="dictationContent"></textarea>
+<textarea rows="23" cols="28" id="dictationContent" name="dictationContent"></textarea>
 <br />
-<select id="repeatTimes"><option value="1">重复1次</option><option value="2">重复2次</option><option value="3" selected="selected">重复3次</option></select>
-
 <input type="button" id="dictationBtn" size="20" value="开始听写" onClick="dictation()" />
-
+&nbsp;
 <input type="button" id="stopDictationBtn" size="20" disabled="disabled" value="停止听写" onClick="stopDictation()" />
 </form>
 </div>
+<div>
+<hr style="border-color:#0033FF" />
 
+<select id="hintRepeatTimes"><option value="0">提示重复0次</option><option value="1" selected="selected">提示重复1次</option><option value="2">提示重复2次</option><option value="3">提示重复3次</option></select>&nbsp;
+
+<select id="repeatTimes"><option value="1">正文重复1次</option><option value="2">正文重复2次</option><option value="3" selected="selected">正文重复3次</option><option value="4">正文重复4次</option><option value="5">正文重复5次</option><option value="6">正文重复6次</option></select>
+
+</div>
 <div style="background-color:#0033FF;color:#CCCCCC; margin-top:5px;">
 <div style="text-align:center">使用说明</div>
 <div style="text-align:left;padding:10px;">
@@ -52,7 +57,6 @@ eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a
 </div>
 
 <div style="display:none"><script src="https://s13.cnzz.com/z_stat.php?id=5808247&web_id=5808247" language="JavaScript"></script></div>
-
-</div>	
+</div>
 </body>
 </html>
