--- a/DictationHelper/index.html
+++ b/DictationHelper/index.html
@@ -7,9 +7,7 @@
 <title>suixin dictation helper</title>
 
 <script type="text/javascript"> 
-
-eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('c 14(6){6=6.R(/(^\\s*)|(\\s*$)/g,"");6=6.R(/(^\\n*)|(\\n*$)/g,"");l 6}c 15(6){b(1d(6).1f("%u")<0){l N}G{l H}}c D(6){1 f=x(3.2(\'D\').a);b(f==11||f<12){f=12}b(15(6)){l 1g*6.w+f}G{l 1c*6.w+f}}c Y(){1 Z=x(3.2("p").a);1 z=x(3.2("z").a);1 e=3.2(\'e\').a;e=14(e);e=e.R(/([.\\n\\r]+)/g,"\\n");1 B=e.1o("\\n");1 h=\'{"9":[\';h+=\'{"d":"1s","p":"\'+z+\'"},\';1q(1 i=0;i<B.w;i++){b(B[i]!=""){h+=\'{"d":"\'+B[i]+\'","p":"\'+Z+\'"},\'}}h+=\'{"d":"1j","p":"\'+z+\'"}\';h+=\']}\';l h}1 t=11;c 1i(){1 o=3.2("o");1 j=3.2("j");o.C=H;j.C=N;1 k=3.2("k");k.y.F="18-v:1h;v:W;";1 q=3.2("q");q.L="1l：";1 4=3.2("4");4.y.F="S:1k;A:0;A-P:1e;A-P-y:1m;A-P-v:1r;13-1n:1p;";1 V=Y();1 7=1t.1K(V);1 i=0;1 m=x(7.9[i].p);t=M(c(){b(i<7.9.w){b(m>0){3.2(\'4\').a=7.9[i].d;J();m--;t=M(U.T,D(7.9[i].d))}G{i++;b(i<7.9.w){m=x(7.9[i].p);m--;b(m>=0){3.2(\'4\').a=7.9[i].d;J()}t=M(U.T,D(7.9[i].d))}G{X()}}}},1N)}c X(){1O(t);1 k=3.2("k");k.y.F="18-v:#1M;v:W;";1 q=3.2("q");q.L="1J";1 4=3.2("4");4.a="";4.y.F="S:1L;";1 o=3.2("o");1 j=3.2("j");o.C=N;j.C=H}c J(){1 I=3.2(\'1Q\');1 E=3.2(\'Q\');1 4=3.2(\'4\').a;I.1W(E);1 1a=\'<O K="Q" 19="19" 1V="1R" />\';1 1b=\'<1U K="1T" 10="1S://1y.1z.1A/1x?1u=1v&1w=1B-8&1G=5&13=\'+4+\'" 1H="O/1I" />\';1 16=\'<1F K="1C" 1D="0" 1E="0" 10="" />\';1 17=\'</O>\';I.L=1a+1b+16+17;E=3.2(\'Q\');E.1P()}',62,121,'|var|getElementById|document|ttsText||str|obj||words|value|if|function|word|dictationContent|timeLength||jsonContent||stopDictationBtn|wordToDict|return|oneWordRepeatCount||dictationBtn|repeatTimes|inf|||intervalRef||color|length|parseInt|style|hintRepeatTimes|border|content|disabled|dictateDuration|ttsAudio|cssText|else|true|ttsDiv|doTTS|id|innerHTML|setTimeout|false|audio|bottom|tts_autio_id|replace|display|callee|arguments|jsonstr|white|stopDictation|getDictationContentJSON|oneWordRepeatTimes|src|null|3000|text|trim|isChineseWord|eee|au2|background|autoplay|au1|sss|50|escape|2px|indexOf|300|green|dictation|听写结束|inline|正在听写|solid|align|split|center|for|black|听写开始|JSON|lan|zh|ie|text2audio|tts|baidu|com|UTF|tts_embed_id|height|width|embed|spd|type|mpeg|欢迎使用听写助手|parse|none|0033FF|4000|clearTimeout|play|bdtts_div_id|auto|http|tts_source_id|source|preload|removeChild'.split('|'),0,{}))
-
+ var _0x4c65=['getElementById','ttsText','stopDictationBtn','hintRepeatTimes','{\x22word\x22:\x22','dictationBtn','正在听写：','word','words','background-color:#0033FF;color:white;','disabled','background-color:green;color:white;','replace','border:0;border-bottom:2px;border-bottom-style:solid;border-bottom-color:black;text-align:center;','dictateDuration','{\x22word\x22:\x22听写结束\x22}','speechSynthesis','value','length','callee','speak','您的浏览器不支持语音合成功能。','style','\x22},'];var _0x4ad1=function(_0x4c6563,_0x4ad1c9){_0x4c6563=_0x4c6563-0x0;var _0x29cf33=_0x4c65[_0x4c6563];return _0x29cf33;};function trim(_0x2acf3e){_0x2acf3e=_0x2acf3e[_0x4ad1('0xc')](/(^\s*)|(\s*$)/g,'');_0x2acf3e=_0x2acf3e[_0x4ad1('0xc')](/(^\n*)|(\n*$)/g,'');return _0x2acf3e;}function isChineseWord(_0x4909ab){if(escape(_0x4909ab)['indexOf']('%u')<0x0){return![];}else{return!![];}}function dictateDuration(_0x301119){var _0x99cd7=parseInt(document['getElementById'](_0x4ad1('0xe'))[_0x4ad1('0x11')]);if(_0x99cd7==null||_0x99cd7<0xbb8){_0x99cd7=0xbb8;}if(isChineseWord(_0x301119)){return 0x12c*_0x301119['length']+_0x99cd7;}else{return 0x32*_0x301119[_0x4ad1('0x12')]+_0x99cd7;}}function getDictationContentJSON(){var _0x38e033=document[_0x4ad1('0x0')]('dictationContent')['value'];_0x38e033=trim(_0x38e033);_0x38e033=_0x38e033['replace'](/([.\n\r]+)/g,'\x0a');var _0x356c94=_0x38e033['split']('\x0a');var _0x4bda06='{\x22words\x22:[';_0x4bda06+='{\x22word\x22:\x22听写开始\x22},';for(var _0x4d6b5e=0x0;_0x4d6b5e<_0x356c94[_0x4ad1('0x12')];_0x4d6b5e++){if(_0x356c94[_0x4d6b5e]!=''){_0x4bda06+=_0x4ad1('0x4')+_0x356c94[_0x4d6b5e]+_0x4ad1('0x17');}}_0x4bda06+=_0x4ad1('0xf');_0x4bda06+=']}';return _0x4bda06;}var intervalRef=null;function dictation(){var _0x264abc=document['getElementById'](_0x4ad1('0x5'));var _0x25ce11=document['getElementById'](_0x4ad1('0x2'));_0x264abc['disabled']=!![];_0x25ce11['disabled']=![];var _0x340d99=document['getElementById']('wordToDict');_0x340d99[_0x4ad1('0x16')]=_0x4ad1('0xb');var _0x1dc1c2=document['getElementById']('inf');_0x1dc1c2['innerHTML']=_0x4ad1('0x6');var _0x271f12=document['getElementById'](_0x4ad1('0x1'));_0x271f12[_0x4ad1('0x16')]=_0x4ad1('0xd');var _0x4d3e81=getDictationContentJSON();var _0x343778=JSON['parse'](_0x4d3e81);var _0x476595=0x0;var _0x18ebfc=parseInt(document['getElementById']('repeatTimes')[_0x4ad1('0x11')]);var _0x2d4cbb=parseInt(document[_0x4ad1('0x0')](_0x4ad1('0x3'))[_0x4ad1('0x11')]);var _0x155c5e=_0x18ebfc;var _0x5d4d96=_0x2d4cbb;intervalRef=setTimeout(function(){if(_0x476595>0x0&&_0x476595<_0x343778[_0x4ad1('0x8')]['length']-0x1&&_0x155c5e>0x0){document['getElementById'](_0x4ad1('0x1'))[_0x4ad1('0x11')]=_0x343778[_0x4ad1('0x8')][_0x476595][_0x4ad1('0x7')];doTTS();_0x155c5e--;intervalRef=setTimeout(arguments[_0x4ad1('0x13')],dictateDuration(_0x343778['words'][_0x476595][_0x4ad1('0x7')]));}else if(_0x476595>0x0&&_0x476595<_0x343778['words'][_0x4ad1('0x12')]-0x1&&_0x155c5e<=0x0){_0x476595++;if(_0x476595<_0x343778[_0x4ad1('0x8')]['length']-0x1){_0x155c5e=_0x18ebfc;document[_0x4ad1('0x0')](_0x4ad1('0x1'))['value']=_0x343778['words'][_0x476595][_0x4ad1('0x7')];doTTS();_0x155c5e--;intervalRef=setTimeout(arguments['callee'],dictateDuration(_0x343778['words'][_0x476595][_0x4ad1('0x7')]));}}if(_0x476595==_0x343778[_0x4ad1('0x8')]['length']-0x1&&_0x5d4d96>=0x0){if(_0x5d4d96>0x0){document[_0x4ad1('0x0')](_0x4ad1('0x1'))[_0x4ad1('0x11')]=_0x343778['words'][_0x476595]['word'];doTTS();_0x5d4d96--;intervalRef=setTimeout(arguments['callee'],dictateDuration(_0x343778['words'][_0x476595]['word']));}else{stopDictation();}}else if(_0x476595==_0x343778[_0x4ad1('0x8')][_0x4ad1('0x12')]-0x1&&_0x2d4cbb==0x0){stopDictation();}if(_0x476595==0x0&&_0x5d4d96>0x0){document['getElementById']('ttsText')['value']=_0x343778['words'][_0x476595][_0x4ad1('0x7')];doTTS();_0x5d4d96--;intervalRef=setTimeout(arguments['callee'],dictateDuration(_0x343778[_0x4ad1('0x8')][_0x476595][_0x4ad1('0x7')]));if(_0x5d4d96==0x0){_0x476595++;_0x5d4d96=_0x2d4cbb;}}else if(_0x476595==0x0&&_0x2d4cbb==0x0){_0x476595++;}},0xfa0);}function stopDictation(){clearTimeout(intervalRef);var _0x51ecb7=document['getElementById']('wordToDict');_0x51ecb7['style']=_0x4ad1('0x9');var _0x395ef9=document[_0x4ad1('0x0')]('inf');_0x395ef9['innerHTML']='欢迎使用听写助手';var _0x5acb47=document[_0x4ad1('0x0')]('ttsText');_0x5acb47['value']='';_0x5acb47['style']='display:none;';var _0x508da7=document['getElementById']('dictationBtn');var _0x4b0926=document[_0x4ad1('0x0')]('stopDictationBtn');_0x508da7['disabled']=![];_0x4b0926[_0x4ad1('0xa')]=!![];}function doTTS(){var _0x496b5b=document[_0x4ad1('0x0')](_0x4ad1('0x1'))[_0x4ad1('0x11')];if(_0x4ad1('0x10')in window){var _0x1ee846=new SpeechSynthesisUtterance(_0x496b5b);window[_0x4ad1('0x10')][_0x4ad1('0x14')](_0x1ee846);}else{alert(_0x4ad1('0x15'));}}
 
 </script>
 </head>
@@ -50,18 +48,25 @@ eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a
 <div style="background-color:#0033FF;color:#CCCCCC; margin-top:5px;">
 <div style="text-align:center">使用说明</div>
 <div style="text-align:left;padding:10px;">
-1、语文、英语均可听写。<br /><br />
-2、听写前先输入想听写的单词，可以让孩子自己录入，强化记忆。<br /><br />
+1、语文、英语均可听写；<br /><br />
+2、听写前先输入想听写的单词，可以让孩子自己录入，强化记忆；<br /><br />
 3、每个听写单元占一行，如想分别听写hello, world两个单词，那么在hello之后换行，如果想两个单词作为一个单元连读,则让这两个单词在一行即可。<br /><br />
-4、可选择听写提示，如选提示重复1次，那么在听写的开始和结束会各提示1次，其他同理。
+4、语句过长很难完成听写,建议每个听写单元不要太长。
 <br /><br />
-5、间隔时间是指两个听写单元间的间隔时间。<br /><br />
-6、经反馈，在部分iOS设备上无法正常播放声音，因为iOS不支持audio标签自动播放，在下一版本中将尝试解决该问题。
-
+5、听写开始和结束时，会有对应重复次数的听写开始和结束的提示，请耐心等待。
 </div>
 </div>
 
-<div style="display:none"><script src="https://s13.cnzz.com/z_stat.php?id=5808247&web_id=5808247" language="JavaScript"></script></div>
+<div style="display:none"><script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?7c8af0f80029332a5ce15a12864b8f57";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+</div>
 </div>
 </body>
 </html>
