--- a/wuziqi/index.html
+++ b/wuziqi/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>五子棋游戏</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="game-container">
+        <h1>五子棋</h1>
+        <canvas id="board"></canvas>
+        <div class="status">黑方回合</div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
